# modular_slam

./: .gitignore  .gitmodules  Dockerfile  dev_into.sh  dev_start.sh  docker-compose.yaml  entrypoint.sh
modular_slam/: CMakeLists.txt
modular_slam/modules/input_kitti_dataset/: CMakeLists.txt  kitti_odometry_dataset.cc  kitti_odometry_dataset.h  kitti_odometry_dataset_cli.cc
modular_slam/modules/input_kitti_dataset/config/: kitti_odometry.yaml
modular_slam/modules/interface/: CMakeLists.txt  hello_world.cc  hello_world_cli.cc  offline_dataset_source.h  raw_data_consumer.h  raw_datasource_base.cc  raw_datasource_base.h
modular_slam/modules/ros2_bridge/: CMakeLists.txt  ros2_bridge.cc  ros2_bridge.h
modular_slam/modules/yaml/: CMakeLists.txt  yaml_helper.h
